<resources>
    <string name="app_name">Data Collection</string>
    <string name="pedestrian">Pedestrian</string>
    <string name="automobile">Automobile</string>
    <string name="twowheeler">Two Wheeler</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="start_button">Start Recording</string>
    <string name="stop_button">Stop Recording</string>
    <string name="reset">Reset</string>
    <string name="timer_initial">00:00.00</string>
</resources>
